# stratum

./: .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  LICENSE-APACHE  README.md  ROADMAP.md  cliff.toml  install.sh
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: nightly.yml  release.yml  (+1 more)
example/: .stratum.yaml  DIALECT_SPECIFIC_TYPES.md  mysql_specific_types.yml  postgres_specific_types.yml  sqlite_specific_types.yml
scripts/: build-release.sh  cross-build.sh
src/: cli.rs  lib.rs  main.rs
src/cli/: Cargo.toml  command_context.rs  mod.rs
src/cli/commands/: apply.rs  export.rs  generate.rs  init.rs  mod.rs  rollback.rs  status.rs  validate.rs
src/cli/src/: cli.rs  lib.rs  main.rs
src/cli/src/cli/: command_context.rs
src/cli/src/cli/commands/: apply.rs  check.rs  destructive_change_formatter.rs  dry_run_formatter.rs  export.rs  generate.rs  init.rs  migration_loader.rs  mod.rs  rollback.rs  sql_parser.rs  status.rs  validate.rs
src/cli/src/cli/commands/generate/: diff.rs  io.rs  mod.rs  output.rs  sql.rs  summary.rs  tests.rs
src/cli/tests/: apply_command_test.rs  cli_integration_test.rs  cli_test.rs  cmd_apply_test.rs  cmd_check_test.rs  cmd_export_test.rs  cmd_generate_test.rs  cmd_init_test.rs  cmd_rollback_test.rs  cmd_status_test.rs  cmd_validate_test.rs  column_rename_e2e_test.rs  column_rename_integration_test.rs  common.rs  config_test.rs  database_connection_test.rs  database_migrator_test.rs  destructive_change_guard_integration_test.rs  dialect_specific_sql_generation_test.rs  edge_migration_column_ops_test.rs  edge_migration_constraint_test.rs  edge_migration_enum_multi_test.rs  edge_migration_type_change_fk_test.rs  edge_migration_type_change_test.rs  error_test.rs  export_command_test.rs  gen_dialect_specific_test.rs  gen_mysql_test.rs  gen_postgres_test.rs  gen_sqlite_test.rs  generate_command_test.rs  init_command_test.rs  integ_cli_test.rs  integ_database_test.rs  integ_destructive_change_test.rs  integ_dialect_specific_test.rs  migration_edge_case_test.rs  migration_generator_test.rs  model_migration_test.rs  model_schema_test.rs  (+17 more)
src/cli/tests/common/: mod.rs
src/core/: Cargo.toml  config.rs  error.rs  migration.rs  mod.rs  schema.rs  schema_diff.rs  type_category.rs
src/core/src/: lib.rs
src/core/src/core/: config.rs  destructive_change_report.rs  error.rs  migration.rs  mod.rs  naming.rs  schema.rs  schema_diff.rs
src/db/: Cargo.toml
src/db/src/: lib.rs
src/db/src/adapters/: connection_string.rs  database.rs  database_introspector.rs  database_migrator.rs  mod.rs  sql_quote.rs  type_mapping.rs
src/db/src/adapters/sql_generator/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlite_table_recreator.rs
src/db/src/adapters/type_mapping/: common.rs  mod.rs  mysql_mapper.rs  postgres_mapper.rs  sqlite_mapper.rs
src/db/src/services/: config_loader.rs  config_serializer.rs  database_config_resolver.rs  destructive_change_detector.rs  migration_generator.rs  migration_pipeline.rs  mod.rs  schema_checksum.rs  schema_conversion.rs  schema_parser.rs  schema_serializer.rs  schema_validator.rs  traits.rs  type_change_validator.rs
src/db/src/services/migration_pipeline/: enum_stages.rs  index_constraint_stages.rs  mod.rs  table_stages.rs
src/db/src/services/schema_conversion/: builder.rs  converters.rs  mod.rs  tests.rs
src/db/src/services/schema_diff_detector/: column_comparator.rs  constraint_comparator.rs  enum_comparator.rs  index_comparator.rs  mod.rs  table_comparator.rs  view_comparator.rs
src/db/src/services/schema_io/: dto.rs  dto_converter.rs  mod.rs  schema_parser.rs  schema_serializer.rs
src/db/src/services/schema_validator/: column_type_validator.rs  constraint_validator.rs  dialect_validator.rs  enum_validator.rs  index_validator.rs  mod.rs  rename_validator.rs  table_validator.rs  validation_helpers.rs  view_validator.rs
tests/: apply_command_test.rs  cli_integration_test.rs  cli_test.rs  column_rename_e2e_test.rs  column_rename_integration_test.rs  config_test.rs  database_connection_test.rs  database_integration_test.rs  database_migrator_test.rs  dependencies_test.rs  dialect_specific_column_type_test.rs  dialect_specific_database_error_test.rs  dialect_specific_integration_test.rs  dialect_specific_sql_generation_test.rs  error_test.rs  export_command_test.rs  generate_command_test.rs  init_command_test.rs  migration_generator_test.rs  migration_model_test.rs  mysql_sql_generator_test.rs  postgres_sql_generator_test.rs  rollback_command_test.rs  schema_checksum_test.rs  schema_diff_detector_test.rs  schema_model_test.rs  schema_parser_test.rs  schema_validator_test.rs  sqlite_sql_generator_test.rs  status_command_test.rs  type_change_migration_test.rs  validate_command_test.rs
(+105 files in other folders)
