[workspace]
members = ["src/cli", "src/core", "src/db"]
resolver = "2"

# リリースビルドの最適化設定
[profile.release]
opt-level = 3        # 最大の最適化
lto = true           # Link Time Optimization を有効化
codegen-units = 1    # 単一コード生成ユニットで最適化
strip = true         # シンボル情報を削除してバイナリサイズを削減
panic = "abort"      # パニック時にスタック巻き戻しをせず即座にアボート
