[package]
name = "strata"
version = "0.1.0"
edition = "2021"
authors = ["Strata Contributors"]
description = "Database schema management CLI tool - Infrastructure as Code for database schemas"
license = "MIT"
repository = "https://github.com/Lazialize/strata"
readme = "../../README.md"
keywords = ["database", "schema", "migration", "cli", "devops"]
categories = ["command-line-utilities", "database"]
rust-version = "1.92"

[dependencies]
strata-core = { path = "../core" }
strata-db = { path = "../db" }
# CLI Framework (2026年1月時点の最新安定版)
clap = { version = "4.5", features = ["derive"] }  # コマンドライン引数パーサー
colored = "3.1"                                     # ターミナルカラー出力
regex = "1"                                         # 正規表現（SQLハイライト）

# Async Runtime (2026年1月時点の最新安定版)
tokio = { version = "1.49", features = ["full"] }  # 非同期ランタイム

# Database (2026年1月時点の最新安定版 - 0.8.6)
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "mysql", "sqlite"] }

# Error Handling (2026年1月時点の最新安定版)
anyhow = "1"                                       # アプリケーションレベルエラー

# Serialization
serde = { version = "1", features = ["derive"] }   # シリアライゼーションフレームワーク
serde_json = "1"                                    # JSON シリアライゼーション

# Additional utilities
chrono = { version = "0.4", features = ["serde"] } # 日時処理
serde-saphyr = "0.0.16"                            # YAMLパーサー（パニックフリー）

[dev-dependencies]
# Testing utilities
tempfile = "3"  # 一時ファイル/ディレクトリ作成
testcontainers = "0.26"  # コンテナベースの統合テスト
testcontainers-modules = { version = "0.14", features = ["postgres", "mysql"] }  # データベースモジュール
thiserror = "2"
sha2 = "0.10"
