[package]
name = "strata-core"
version = "0.1.0"
edition = "2021"
authors = ["Strata Contributors"]
license = "MIT"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde-saphyr = "0.0.16"
